--- a/AuthService/src/main/resources/application.yml
+++ b/AuthService/src/main/resources/application.yml
@@ -3,15 +3,21 @@ spring:
     name: AuthService
 
   datasource:
-    url: jdbc:postgresql://localhost:5432/expense_tracker
-    driver-class-name: org.postgresql.Driver
-    username: "postgres"
-    password: "Karan@123"
+    url: jdbc:mysql://${MYSQL_HOST:10.211.55.03}:${MYSQL_PORT:3306}/${MYSQL_DB:authservice}?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: "user11"
+    password: "user@1234"
 
   jpa:
-    hibernate:
-      ddl-auto: update
+#    hibernate:
+#      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
         format_sql: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+management:
+  endpoints:
+    web:
+      exposure:
+        include: beans
