--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,25 +4,27 @@ volumes:
   mysql-db:
     driver: local
 
-networks:
-  my-net:
-    driver: bridge
-
 services:
   zookeeper:
     container_name: con-zookeeper
-    image: zookeeper:3.8.4
+    image: confluentinc/cp-zookeeper:7.4.4
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
       ZOOKEEPER_TICK_TIME: 2000
     ports:
       - 2181:2181
+    healthcheck:
+      test: ["CMD", "echo", "ruok", "|", "nc", "localhost", "2181"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   kafka:
     container_name: con-kafka
-    image: apache/kafka:3.7.2
+    image: confluentinc/cp-kafka:7.4.4
     depends_on:
-      - zookeeper
+      zookeeper:
+        condition: service_healthy
     ports:
       - 9092:9092
     environment:
@@ -39,13 +41,12 @@ services:
     container_name: mysql-8.3.0
     restart: always
     environment:
-      MYSQL_USER: test
-      MYSQL_ROOT_USER: root
-      MYSQL_PASSWORD: 'password'
-      MYSQL_ROOT_PASSWORD: 'password'
+      MYSQL_ROOT_PASSWORD: ""
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
     volumes:
-      - mysql-db
+      - mysql-db:/var/lib/mysql
     ports:
       - '3306:3306'
     expose:
       - '3306'
+
