--- a/AuthService/src/main/resources/application.yml
+++ b/AuthService/src/main/resources/application.yml
@@ -12,14 +12,14 @@ spring:
       group-id: event-test-group
 
   datasource:
-    url: jdbc:mysql://${MYSQL_HOST:10.211.55.03}:${MYSQL_PORT:3306}/${MYSQL_DB:authservice}?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+    url: jdbc:mysql://${MYSQL_HOST:10.211.55.03}:${MYSQL_PORT:3306}/${MYSQL_DB:authservice_db}?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: "user11"
     password: "user@1234"
 
   jpa:
-#    hibernate:
-#      ddl-auto: update
+    hibernate:
+      ddl-auto: update
     show-sql: true
     properties:
       hibernate:
