major flow changes

--- a/AuthService/src/main/resources/application.yml
+++ b/AuthService/src/main/resources/application.yml
@@ -4,12 +4,11 @@ spring:
 
   kafka:
     bootstrap-servers: 10.211.55.3:9092
-
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.apache.kafka.common.serialization.StringSerializer
     consumer:
-      group-id: event-test-group
+      group-id: event-user-creation
 
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:10.211.55.03}:${MYSQL_PORT:3306}/${MYSQL_DB:authservice_db}?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
@@ -30,3 +29,9 @@ management:
     web:
       exposure:
         include: beans
+
+app:
+  jwt:
+    secret: "Sdsdf"
+    access-token-expiration: 300000  # 5 minutes
+    refresh-token-expiration: 2592000000  # 30 days
