--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -4,10 +4,27 @@ spring:
 
   kafka:
     bootstrap-servers: 10.211.55.3:9092
+    topic-json:
+      name: "T11TEST"
     consumer:
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       value-deserializer: com.karan.userservice.deserializer.UserInfoDeserializer
-      group-id: event-test-group
+      group-id: event-user-creation
+
+  datasource:
+    url: jdbc:mysql://${MYSQL_HOST:10.211.55.03}:${MYSQL_PORT:3306}/${MYSQL_DB:authservice_db}?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: "user11"
+    password: "user@1234"
+
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
 
 
 server:
