lombok issue solved

--- a/AuthService/pom.xml
+++ b/AuthService/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.karan</groupId>
 	<artifactId>AuthService</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>AuthService</name>
 	<description>AuthService</description>
 	<url/>
@@ -98,35 +98,22 @@
 			<version>3.7.1</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.30</version>
+			<scope>provided</scope> <!-- Required for IDE support -->
+		</dependency>
+
 
 	</dependencies>
 
 	<build>
-		<finalName>auth-service</finalName>
+		<finalName>AuthService</finalName>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<annotationProcessorPaths>
-						<path>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</path>
-					</annotationProcessorPaths>
-				</configuration>
-			</plugin>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
 			</plugin>
 		</plugins>
 	</build>
