--- a/UserService/pom.xml
+++ b/UserService/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.karan</groupId>
     <artifactId>UserService</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.0.1</version>
     <name>UserService</name>
     <description>UserService</description>
     <url/>
@@ -76,6 +76,7 @@
     </dependencies>
 
     <build>
+        <finalName>UserService</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
