--- a/AuthService/src/main/resources/application.yml
+++ b/AuthService/src/main/resources/application.yml
@@ -10,6 +10,7 @@ spring:
     consumer:
       group-id: event-user-creation
 
+
   datasource:
     url: jdbc:mysql://${MYSQL_HOST:10.211.55.03}:${MYSQL_PORT:3306}/${MYSQL_DB:authservice_db}?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -30,8 +31,12 @@ management:
       exposure:
         include: beans
 
+
 app:
   jwt:
     secret: "Sdsdf"
     access-token-expiration: 300000  # 5 minutes
     refresh-token-expiration: 2592000000  # 30 days
+
+server:
+  port: 7001
